refactor tests and engine closure (#1512)
* refactor tests and engine closure

* refactor test scope

* refactor test scope

* adding Test Summary

* fixing ChecksumTests.java

* optimize FileActionsTests

* add null check

* remove broken tests

* disable test

* remove deprecated tests

* refactor broken tests

* Delete src/test/java/testPackage/FullPageScreenshotWithHeaderTests.java

Signed-off-by: Mohab Mohie <Mohab.MohieElDeen@outlook.com>

---------

Signed-off-by: Mohab Mohie <Mohab.MohieElDeen@outlook.com>